@@ -1,6 +1,7 @@
 # version 0.66
 
  - Updated query and user-group name pattern.
+ - Added redirect_uri to client info API.
 
 # version 0.65.2
 
